--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
  <div class="content">
    <div class="title"><span>My Skills</span></div>
    <div class="skills-details">
-     <!-- <div class="text">
-       <div class="topic">Skills Reflects Our Knowledge</div>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus natus tenetur tempora? Quasi, rem quas omnis. Porro rem aspernatur reiciendis ut praesentium minima ad, quos, officia! Illo libero, et, distinctio repellat sed nesciunt est modi quaerat placeat. Quod molestiae, alias?</p>
+     <div class="text">
+       <div class="topic">Professional skills</div>
+       <p>Good in designing websites and flyers. Tends to do projects in RPA using the tool of UIPATH</p>
        <div class="experience">
          <div class="num">10</div>
          <div class="exp">Years Of <br> Experience</div>
