--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
          <div class="num">10</div>
          <div class="exp">Years Of <br> Experience</div>
        </div>
-     </div> -->
+     </div>
      <div class="boxes">
        <div class="box">
          <div class="topic">Front-End</div>
