--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       <p>I'm Currently Pursuing my Undergraduate in Dr.Mahalingam College of Engineering & Technology, I am Majoring in Computer Science. I'm involved as a member in Institution's Innovation Council of MCET, where i can enrich & explore my skill and knowledge with an community. I also serve as a Frontend Developer in TeamTechSquad Organizing were i could explore & experiment about web developing. I am also an member of StudioMcet Photography Club were we store memories of each student into Stills. I am open to opportunities for the same.</p>
       <div class="button">
         <button>Download CV</button>
+        <a href="https://drive.google.com/file/d/1Z30_X1LbcIqEjAJ1USxvlm38GbkH1RVY/view?usp=drivesdk" target="_blank"><button>Download CV</button></a>
+
       </div>
     </div>
   </div>
