--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Srivanth</div>
-       <div class="text-three">A Web developer</div>
+       <div class="text-three">A Web developer & Business Analyst</div>
      </div>
      <!-- <div class="button">
        <button>Hire Me</button>
@@ -92,11 +92,11 @@
          <div class="per">75%</div>
        </div>
        <div class="box">
-         <div class="topic">Back-End</div>
+         <div class="topic">Back-End(SQL)</div>
          <div class="per">65%</div>
        </div>
        <div class="box">
-         <div class="topic">Networking</div>
+         <div class="topic">Data Analytics</div>
          <div class="per">60%</div>
        </div>
        <div class="box">
@@ -118,42 +118,42 @@
            <i class="fas fa-desktop"></i>
        </div>
        <div class="topic">Web Devlopment</div>
-       <p> Developed a web applications using with HTML, CSS, JS, React & Bootstrap. </p>
+       <p> Developed a web applications using with HTML, CSS, JS, React & Backend connectivity SQL, PHP MyAdmin. </p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-cloud"></i>
        </div>
        <div class="topic">Cloud</div>
-       <p> Currently Preparing for AWS SysOps Administrator Associate exam </p>
+       <p> Created a Personalized Search Engine Project Using Docker & AWS, Archeived Microsoft Azure Fundamental Certification(AZ-900). </p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-chart-line"></i>
        </div>
-       <div class="topic">Digital Marketing</div>
-       <p> I have published Blogging application with ads, Category under Content Marketing which is free of cost </p>
+       <div class="topic">Dynamics 365</div>
+       <p> Dynamics 365 is a ERP(Enterprise Resource Planning), Archeived Microsoft Dynamics 365 Fundamentals Certification </p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-network-wired"></i>
        </div>
-       <div class="topic">Networking</div>
-       <p> Currently doing a Project on Server Client Based chat application in java using TCP </p>
+       <div class="topic">Data-Analytics</div>
+       <p> Currently ongoing Internship as Data Analytics at WalkerScott, Created a Business Analysis Report using PowerBI</p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-camera-retro"></i>
        </div>
-       <div class="topic">Photography</div>
-       <p> Photoshop cc & Lr is the favorite tools for editing and designing </p>
+       <div class="topic">Power-BI </div>
+       <p> Achieved Microsoft PowerBI Data Analytics Associate Certification(PL-300) & Created a Company's Finacial Reports with Actual,Budget & Forecast </p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fab fa-github"></i>
        </div>
        <div class="topic">GitHub</div>
-       <p> By the help of GitHub Pages we can host the projects directly from a repository  </p>
+       <p> Having a experience on GitHub, By the help of GitHub Pages hosted the Multiple projects directly from a repository  </p>
      </div>
    </div>
    </div>
