--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="right">
       <div class="topic">Myself  Srivanth</div>
-      <p>I'm Currently Pursuing my Undergraduate in Dr.Mahalingam College of Engineering & Technology, I am Majoring in Computer Science. I'm involved as a member in Institution's Innovation Council of MCET, where i can enrich & explore my skill and knowledge with an community. I also serve as a Frontend Developer in TeamTechSquad Organizing were i could explore & experiment about web developing. I am also an member of StudioMcet Photography Club were we store memories of each student into Stills. I am open to opportunities for the same.</p>
+      <p>I'm Ongoing Internship at Walkerscott Completed my Undergraduate at Dr.Mahalingam College of Engineering & Technology, I am Majoring in Computer Science. I'm involved as a member in Institution's Innovation Council of MCET, where i can enrich & explore my skill and knowledge with an community. I also serve as a Frontend Developer in TeamTechSquad Organizing were i could explore & experiment about web developing. I am also an member of StudioMcet Photography Club were we store memories of each student into Stills. I am open to opportunities for the same.</p>
       <div class="button">
         <a href="https://drive.google.com/file/d/1Tc6IJLeZtysvpkr3IKDHP7tq_Wy4XgXM/view?usp=sharing"><button>Download CV</a>
       </div>
@@ -165,7 +165,7 @@
     <div class="title"><span>Contact Me</span></div>
       <div class="text">
       <div class="button">
-        <button>Let's Talk</button>
+        <button>Let's Talk <a href="mailto:someone@example.com"> </button>
       </div>
     </div>
   </div>
@@ -174,7 +174,7 @@
 <!-- Footer Section Start -->
 <footer>
   <div class="text">
-    <span>&#169; Srivanth, 2024</span>
+    <span>&#169; Srivanth, 2025</span>
   </div>
 </footer>
 
