--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
      </div>
        <div class="box">
          <div class="icon">
-           <i class="fas fa-camera-retro"></i>
+           <i class="fas fa-chart-line"></i>
        </div>
        <div class="topic">Power-BI </div>
        <p> Achieved Microsoft PowerBI Data Analytics Associate Certification(PL-300) & Created a Company's Finacial Reports with Actual,Budget & Forecast </p>
