--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="title"><span>Contact Me</span></div>
       <div class="text">
       <div class="button">
-        <button>Let's Talk <a href="mailto:someone@example.com"> </button>
+        <button>Let's Talk <p> <a href="mailto:someone@example.com"> </a> </p></button>
       </div>
     </div>
   </div>
