--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="media-icons">
         <a href="https://www.linkedin.com/in/srivanth-p-a181831bb/"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/srivanthp"><i class="fab fa-github"></i></a>
-        <a href="mailto: srivanthp23@gmail.com"><i class="fa fa-envelope"></i></a>
+        <a href="mailto: srivanth2002@gmail.com"><i class="fa fa-envelope"></i></a>
         <a href=" https://instagram.com/p.sri_23?igshid=NDk5N2NlZjQ= "><i class="fab fa-instagram"></i></a>
       </div>
     </div>
