--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
       </ul>
       <div class="media-icons">
-        <a href="https://www.linkedin.com/in/srivanth-p-a181831bb/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/srivanth-parthasarathy-a181831bb/"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/srivanthp"><i class="fab fa-github"></i></a>
         <a href="mailto: srivanth2002@gmail.com"><i class="fa fa-envelope"></i></a>
         <a href=" https://instagram.com/p.sri_23?igshid=NDk5N2NlZjQ= "><i class="fab fa-instagram"></i></a>
@@ -62,7 +62,7 @@
       <img src="about.jpg" alt="">
     </div>
     <div class="right">
-      <div class="topic">Myself  Srivanth</div>
+      <div class="topic">Myself  Srivanth Parthasarathy</div>
       <p>I'm Ongoing Internship at Walkerscott Completed my Undergraduate at Dr.Mahalingam College of Engineering & Technology, I am Majoring in Computer Science. I'm involved as a member in Institution's Innovation Council of MCET, where i can enrich & explore my skill and knowledge with an community. I also serve as a Frontend Developer in TeamTechSquad Organizing were i could explore & experiment about web developing. I am also an member of StudioMcet Photography Club were we store memories of each student into Stills. I am open to opportunities for the same.</p>
       <div class="button">
         <a href="https://drive.google.com/file/d/1Tc6IJLeZtysvpkr3IKDHP7tq_Wy4XgXM/view?usp=sharing"><button>Download CV</a>
